--- a/src/Login.css
+++ b/src/Login.css
@@ -22,11 +22,11 @@
 
 .login__btn {
   padding: 10px;
-  font-size: 18px;
+  font-size: 30px;
   margin-bottom: 10px;
   border: none;
   color: white;
-  background-color: black;
+  background-color: green;
 }
 
 .login__google {
